--- a/public/about/author.html
+++ b/public/about/author.html
@@ -1,4 +1,14 @@
-<h1>Created by</h1>
-<ul>
-  <li>Vladimir Trachenko, <a href="https://github.com/vtpros/">Github</a> profile</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Author</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Created by</h1>
+    <ul>
+      <li>Vladimir Trachenko, <a href="https://github.com/vtpros/" target="_blank">Github</a> profile</li>
+    </ul>
+  </body>
+</html>
